[tool.poetry]
name = "belch"
version = "0.1.0"
description = "A Python tool for importing and analyzing Burp Suite's XML traffic captures, featuring an efficient database storage and a user-friendly graphical interface."
authors = ["sandmanscanga <59103444+sandmanscanga@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
colorama = "^0.4.6"
ipdb = "^0.13.13"
ipython = "^8.18.1"
lxml = "^4.9.3"
pre-commit = "^3.6.0"
requests = "^2.31.0"
rich = "^13.7.0"


[tool.poetry.group.documentation.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"


[tool.poetry.group.formatters.dependencies]
black = "^23.12.0"
isort = "^5.13.2"


[tool.poetry.group.linters.dependencies]
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.12.2"
flake8-comprehensions = "^3.14.0"
flake8-docstrings = "^1.7.0"
flake8-docstrings-complete = "^1.3.0"
flake8-import-order = "^0.18.2"
flake8-imports = "^0.1.1"
flake8-mutable = "^1.2.0"
flake8-pydocstyle = "^0.2.3"
pydocstyle = "^6.3.0"
pylint = "^3.0.3"


[tool.poetry.group.security.dependencies]
bandit = "^1.7.6"
safety = "^2.3.5"


[tool.poetry.group.testing.dependencies]
codecov = "^2.1.13"
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
pytest-isort = "^3.1.0"


[tool.poetry.group.type_checking.dependencies]
mypy = "^1.7.1"
pydantic = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
